[package]
name = "actix-crud"
version = "0.1.0"
authors = ["Arve Seljebu <arve.seljebu@knowit.no>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
dotenv = "0.14"
env_logger = "0.5"
failure = "0.1.1"
r2d2 = "0.8.2"
r2d2_sqlite = "0.10.0"
rusqlite = "0.18"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "sqlite"
harness = false

