[package]
name = "actix_crud"
version = "0.1.0"
authors = ["Arve Seljebu <arve.seljebu@knowit.no>"]
edition = "2018"

[dependencies]
actix-service = "0.4"
actix-session = "0.2"
actix-web = "1.0"
dotenv = "0.14"
env_logger = "0.5"
failure = "0.1.1"
log = "0.4.6"
r2d2 = "0.8.5"
r2d2_sqlite = "0.11.0"
rusqlite = { version = "0.19", features = ["uuid", "bundled"] }
libsqlite3-sys = "*"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0"
bcrypt = "0.4"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "sqlite"
harness = false

[[bench]]
name = "http"
harness = false
